libs/fleet/sdk-bindings/swift/CyclopsSdkSchemaFFI.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    uint64_t capacity;
    uint64_t len;
    uint8_t *_Nullable data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
uint64_t uniffi_cyclops_sdk_schema_fn_clone_sandboxservicebuilder(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void uniffi_cyclops_sdk_schema_fn_free_sandboxservicebuilder(uint64_t handle, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_schema_fn_constructor_sandboxservicebuilder_new(RustCallStatus *_Nonnull out_status

);
RustBuffer uniffi_cyclops_sdk_schema_fn_method_sandboxservicebuilder_build(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_schema_fn_method_sandboxservicebuilder_name(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_schema_fn_method_sandboxservicebuilder_protocol(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_schema_fn_method_sandboxservicebuilder_target_port(uint64_t ptr, uint16_t value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_schema_fn_clone_sandboxtemplaterefbuilder(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void uniffi_cyclops_sdk_schema_fn_free_sandboxtemplaterefbuilder(uint64_t handle, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_schema_fn_constructor_sandboxtemplaterefbuilder_new(RustCallStatus *_Nonnull out_status

);
RustBuffer uniffi_cyclops_sdk_schema_fn_method_sandboxtemplaterefbuilder_build(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_schema_fn_method_sandboxtemplaterefbuilder_name(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_schema_fn_clone_vmtemplatebuilder(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void uniffi_cyclops_sdk_schema_fn_free_vmtemplatebuilder(uint64_t handle, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_schema_fn_constructor_vmtemplatebuilder_new(RustCallStatus *_Nonnull out_status

);
RustBuffer uniffi_cyclops_sdk_schema_fn_method_vmtemplatebuilder_build(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_schema_fn_method_vmtemplatebuilder_command(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_schema_fn_method_vmtemplatebuilder_container_disk_image(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_schema_fn_method_vmtemplatebuilder_cpu_cores(uint64_t ptr, uint32_t value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_schema_fn_method_vmtemplatebuilder_firmware(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_schema_fn_method_vmtemplatebuilder_image_pull_policy(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_schema_fn_method_vmtemplatebuilder_image_pull_secret(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_schema_fn_method_vmtemplatebuilder_memory(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_schema_fn_method_vmtemplatebuilder_nested_virtualization(uint64_t ptr, int8_t value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_schema_fn_method_vmtemplatebuilder_node_selector(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_schema_fn_method_vmtemplatebuilder_oidc(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_schema_fn_method_vmtemplatebuilder_probes(uint64_t ptr, uint64_t value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_schema_fn_method_vmtemplatebuilder_runtime(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_schema_fn_method_vmtemplatebuilder_runtime_class_name(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_schema_fn_method_vmtemplatebuilder_services(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_schema_fn_method_vmtemplatebuilder_tolerations(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
void uniffi_cyclops_sdk_schema_fn_free_preservedjson(uint64_t handle, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_schema_fn_constructor_preservedjson_from_json(RustBuffer value, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_cyclops_sdk_schema_fn_method_preservedjson_to_json(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_schema_fn_constructor_osgymsandboxtemplatespecbuilder_new(RustCallStatus *_Nonnull out_status

);
RustBuffer uniffi_cyclops_sdk_schema_fn_method_osgymsandboxtemplatespecbuilder_build(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_schema_fn_method_osgymsandboxtemplatespecbuilder_vm_template(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_schema_fn_constructor_osgymsandboxwarmpoolspecbuilder_new(RustCallStatus *_Nonnull out_status

);
uint64_t uniffi_cyclops_sdk_schema_fn_method_osgymsandboxwarmpoolspecbuilder_autoscaling(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_cyclops_sdk_schema_fn_method_osgymsandboxwarmpoolspecbuilder_build(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_schema_fn_method_osgymsandboxwarmpoolspecbuilder_replicas(uint64_t ptr, uint32_t value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_schema_fn_method_osgymsandboxwarmpoolspecbuilder_sandbox_template_ref(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_schema_fn_method_osgymsandboxwarmpoolspecbuilder_ttl_seconds_after_created(uint64_t ptr, uint32_t value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_schema_fn_clone_warmpoolautoscalingbuilder(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void uniffi_cyclops_sdk_schema_fn_free_warmpoolautoscalingbuilder(uint64_t handle, RustCallStatus *_Nonnull out_status
);